--- a/src/app/modules/problems/pages/statistics/section-difficulties/section-difficulties.component.html
+++ b/src/app/modules/problems/pages/statistics/section-difficulties/section-difficulties.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<kep-card>
   <div class="card-header">
     <div class="card-title">
       {{ 'Solved' | translate }}
@@ -152,4 +152,4 @@
       </swiper>
     </div>
   </div>
-</div>
+</kep-card>
