--- a/src/app/modules/problems/pages/problems/sections/section-header/section-header.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-header/section-header.component.html
@@ -1,20 +1,20 @@
 <app-content-header [contentHeader]="contentHeader">
   <div class="btn-list">
-    <div class="d-flex gap-50" [ngClass.lt-md]="'d-flex'">
-      <a routerLink="rating" class="btn btn-primary-light" [ngClass.lt-md]="'btn-sm'">
-        <kep-icon name="ranking" class="font-medium-1"></kep-icon>
+    <div [ngClass.lt-md]="'d-flex'" class="d-flex gap-50">
+      <a [ngClass.lt-md]="'btn-sm'" class="btn btn-primary-light" routerLink="rating">
+        <kep-icon class="font-medium-1" name="ranking"></kep-icon>
         <span [ngClass.lt-md]="'d-none'">
           {{ 'Rating' | translate }}
         </span>
       </a>
-      <a routerLink="statistics" class="btn btn-primary-light" [ngClass.lt-md]="'btn-sm'">
-        <kep-icon name="statistics" class="font-medium-1"></kep-icon>
+      <a [ngClass.lt-md]="'btn-sm'" class="btn btn-primary-light" routerLink="statistics">
+        <kep-icon class="font-medium-1" name="statistics"></kep-icon>
         <span [ngClass.lt-md]="'d-none'">
           {{ 'Statistics' | translate }}
         </span>
       </a>
-      <a routerLink="attempts" class="btn btn-primary-light" [ngClass.lt-md]="'btn-sm'">
-        <kep-icon name="attempt" class="font-medium-1"></kep-icon>
+      <a [ngClass.lt-md]="'btn-sm'" class="btn btn-primary-light" routerLink="attempts">
+        <kep-icon class="font-medium-1" name="attempt"></kep-icon>
         <span [ngClass.lt-md]="'d-none'">
           {{ 'Attempts' | translate }}
         </span>
@@ -22,37 +22,3 @@
     </div>
   </div>
 </app-content-header>
-
-<kep-card [cardHeight]="'65px'" *ngIf="isAuthenticated">
-  @if (isLoading) {
-    <ngx-skeleton-loader
-      count="1"
-      animation="pulse"
-      appearance="line"
-      [theme]="{height: '40px', 'margin-top': '0.75rem', background: 'var(--skeleton-color)'}"
-    ></ngx-skeleton-loader>
-  } @else {
-    @if (currentUser) {
-      <div class="card-footer d-flex justify-content-between">
-        <div class="solved text-center d-flex justify-content-between">
-          <div class="text-dark" [ngClass.gt-sm]="'font-medium-2'" [ngClass.lt-md]="'font-small-3'">
-            <kep-icon type="duotone" color="primary" name="check-square"></kep-icon>
-            {{ 'Solved' | translate }}: {{ data.solved }}
-          </div>
-        </div>
-        <div class="solved text-center d-flex justify-content-between">
-          <div class="text-dark" [ngClass.gt-sm]="'font-medium-2'" [ngClass.lt-md]="'font-small-3'">
-            <kep-icon type="duotone" color="primary" name="rating"></kep-icon>
-            {{ 'Rating' | translate }}: {{ data.rating }}
-          </div>
-        </div>
-        <div class="solved text-center d-flex justify-content-between">
-          <div class="text-dark" [ngClass.gt-sm]="'font-medium-2'" [ngClass.lt-md]="'font-small-3'">
-            <kep-icon type="duotone" color="primary" name="ranking"></kep-icon>
-            {{ 'Rank' | translate }}: {{ data.rank }}/{{ data.usersCount }}
-          </div>
-        </div>
-      </div>
-    }
-  }
-</kep-card>
