--- a/src/app/modules/problems/pages/problems/sections/section-problems-filter/section-problems-filter.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-problems-filter/section-problems-filter.component.html
@@ -31,6 +31,11 @@
               formControlName="ordering"
             >
               <ng-option></ng-option>
+              @for (item of orderingOptions; track item.value) {
+                <ng-option [value]="item.value">
+                  {{ item.label | translate }}
+                </ng-option>
+              }
             </ng-select>
           </div>
         </div>
