Update problems search placeholder translation

--- a/src/app/modules/problems/pages/problems/sections/section-problems-filter/section-problems-filter.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-problems-filter/section-problems-filter.component.html
@@ -15,7 +15,7 @@
               class="form-control"
               formControlName="search"
               name="title"
-              placeholder="{{ 'TITLE' | translate }}"
+              placeholder="{{ 'PROBLEMS_SEARCH_PLACEHOLDER' | translate }}"
               type="text"
             />
           </div>
