--- a/src/assets/scss/util/_background.scss
+++ b/src/assets/scss/util/_background.scss
@@ -612,6 +612,11 @@
   color: $black !important;
 }
 
+.text-bg-blue {
+  background-color: $blue !important;
+  color: $black !important;
+}
+
 .text-bg-success {
   background-color: $success !important;
   color: $black !important;
