Use autocomplete filters on attempts page

--- a/src/app/modules/problems/components/attempts-filter/attempts-filter.component.html
+++ b/src/app/modules/problems/components/attempts-filter/attempts-filter.component.html
@@ -20,7 +20,10 @@
             {{ 'Problem' | translate }} ID
           </label>
 
-          <input class="form-control" formControlName="problemId">
+          <problem-autocomplete
+            class="w-100"
+            formControlName="problemId"
+          ></problem-autocomplete>
         </div>
       </div>
 
@@ -31,7 +34,11 @@
             {{ 'Username' | translate }}
           </label>
 
-          <input class="form-control" formControlName="username">
+          <user-autocomplete
+            class="w-100"
+            formControlName="username"
+            [showAvatar]="true"
+          ></user-autocomplete>
         </div>
       </div>
 
