--- a/src/app/modules/problems/components/attempts-filter/attempts-filter.component.html
+++ b/src/app/modules/problems/components/attempts-filter/attempts-filter.component.html
@@ -17,10 +17,10 @@
         <div class="mb-1">
           <label class="text-primary">
             <kep-icon name="problem" size="small-4"/>
-            {{ 'Problem' | translate }} ID
+            {{ 'Problem' | translate }}
           </label>
 
-          <input class="form-control" formControlName="problemId">
+          <problems-autocomplete formControlName="problemId"/>
         </div>
       </div>
 
@@ -28,10 +28,10 @@
         <div class="mb-1">
           <label class="text-primary">
             <kep-icon name="username" size="small-4"/>
-            {{ 'Username' | translate }}
+            {{ 'User' | translate }}
           </label>
 
-          <input class="form-control" formControlName="username">
+          <users-autocomplete formControlName="username"/>
         </div>
       </div>
 
