--- a/src/app/modules/problems/pages/attempts/attempts.component.html
+++ b/src/app/modules/problems/pages/attempts/attempts.component.html
@@ -3,7 +3,10 @@
     <app-content-header (refresh)="reloadPage()" [contentHeader]="contentHeader"></app-content-header>
 
     @if (currentUser) {
-      <attempts-filter (filterChange)="filterChange($event)"/>
+      <attempts-filter
+        (filterChange)="filterChange($event)"
+        (refresh)="reloadPage()"
+        [initialFilter]="initialFilter"/>
     }
 
     @if (!attempts && isLoading) {
