--- a/src/app/modules/users/ui/pages/user-profile/user-ratings/user-ratings.component.html
+++ b/src/app/modules/users/ui/pages/user-profile/user-ratings/user-ratings.component.html
@@ -35,6 +35,12 @@
         <problems-activity-card [username]="username"></problems-activity-card>
       </div>
     </div>
+
+    <a
+      [routerLink]="[Resources.Attempts, username]"
+      class="btn btn-outline-primary btn-sm mt-1 w-100">
+      {{ 'Attempts' | translate }}
+    </a>
   </div>
 </kep-card>
 
