--- a/src/app/modules/problems/pages/problems/sections/section-problems-list/section-problems-list.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-problems-list/section-problems-list.component.html
@@ -25,7 +25,7 @@
 
             <div class="d-flex justify-content-end gap-1 flex-column">
               <div class="text-dark fw-semibold">
-                {{ problem.id }} {{ problem.title }}
+                {{ problem.id }}. {{ problem.title }}
               </div>
 
               <div class="d-flex gap-2">
