--- a/src/app/modules/contests/pages/contests/sections/section-categories/section-categories.component.html
+++ b/src/app/modules/contests/pages/contests/sections/section-categories/section-categories.component.html
@@ -1,45 +1,36 @@
-<div class="my-2">
-  <div class="font-medium-5 text-dark">{{ 'Categories' | translate }}</div>
+<div class="categories-select">
+  @if (isLoading) {
+    <ngx-skeleton-loader
+      class="w-100"
+      count="1"
+      animation="pulse"
+      appearance="line"
+      [theme]="{height: '38px', 'border-radius': '0.357rem', background: 'var(--skeleton-color)'}"
+    ></ngx-skeleton-loader>
+  } @else {
+    <ng-select
+      class="w-100"
+      [items]="categories"
+      bindLabel="title"
+      bindValue="id"
+      [clearable]="true"
+      [searchable]="false"
+      [placeholder]="'Categories' | translate"
+      [(ngModel)]="activeCategory"
+      (ngModelChange)="categoryChange($event)">
+      <ng-template ng-label-tmp let-item="item">
+        <div class="d-flex align-items-center">
+          <kep-icon *ngIf="item?.icon" class="me-1" type="duotone" size="medium-1" color="primary" [name]="item.icon"></kep-icon>
+          <span>{{ item?.title }}</span>
+        </div>
+      </ng-template>
+      <ng-template ng-option-tmp let-item="item">
+        <div class="d-flex align-items-center w-100">
+          <kep-icon *ngIf="item?.icon" class="me-1" type="duotone" size="medium-1" color="primary" [name]="item.icon"></kep-icon>
+          <span>{{ item?.title }}</span>
+          <span class="ms-auto text-muted small">{{ item?.contestsCount }}</span>
+        </div>
+      </ng-template>
+    </ng-select>
+  }
 </div>
-
-@if (isLoading) {
-  <div class="row">
-    @for (_ of [].constructor(8); track $index) {
-      <div class="col-12 col-md-6 col-lg-3">
-        <ngx-skeleton-loader
-          class="custom-skeleton"
-          count="1"
-          animation="pulse"
-          appearance="line"
-          [theme]="{height: '107px', background: 'var(--skeleton-color)'}"
-        ></ngx-skeleton-loader>
-      </div>
-    }
-  </div>
-} @else {
-  <div class="row">
-    @for (category of categories; track category.id) {
-      <div class="col-lg-3 col-md-6 col-12">
-        <kep-card
-          customClass="contest-category-card cursor-pointer"
-          [ngClass]="{'active': category.id == activeCategory}"
-          (click)="click(category.id)">
-          <div class="card-header pb-4 justify-content-start">
-            <div class="category-icon me-1">
-              <kep-icon type="duotone" size="large-1" color="primary" [name]="category.icon"></kep-icon>
-            </div>
-
-            <div class="card-title">
-              {{ category.title }}
-              <div class="mt-2">
-                <kep-icon size="medium-1" name="contest"></kep-icon>
-                <span [ngbTooltip]="'Contests' | translate">{{ category.contestsCount }}</span>
-              </div>
-            </div>
-          </div>
-
-        </kep-card>
-      </div>
-    }
-  </div>
-}
