--- a/src/app/styles/scifi-extended/content.scss
+++ b/src/app/styles/scifi-extended/content.scss
@@ -43,15 +43,19 @@ img {
 .total-count {
   font-size: 14px;
   font-weight: 100;
+  color: #000;
   vertical-align: super;
-  color: #888ea8;
   letter-spacing: 2px;
   margin-left: 0.25rem;
+
+  @include dark-layout {
+    color: #ffffff;
+  }
 }
 
 
 app-sidebar .active:has(> kep-icon) {
-  filter: drop-shadow(0 0 5px var(--primary));
+  // filter: drop-shadow(0 0 5px var(--primary));
 }
 
 .cursor-pointer {
