--- a/src/app/modules/contests/pages/contests/sections/section-categories/section-categories.component.html
+++ b/src/app/modules/contests/pages/contests/sections/section-categories/section-categories.component.html
@@ -1,36 +1,20 @@
-<div class="categories-select">
-  @if (isLoading) {
-    <ngx-skeleton-loader
-      class="w-100"
-      count="1"
-      animation="pulse"
-      appearance="line"
-      [theme]="{height: '38px', 'border-radius': '0.357rem', background: 'var(--skeleton-color)'}"
-    ></ngx-skeleton-loader>
-  } @else {
-    <ng-select
-      class="w-100"
-      [items]="categories"
-      bindLabel="title"
-      bindValue="id"
-      [clearable]="true"
-      [searchable]="false"
-      [placeholder]="'Categories' | translate"
-      [(ngModel)]="activeCategory"
-      (ngModelChange)="categoryChange($event)">
-      <ng-template ng-label-tmp let-item="item">
-        <div class="d-flex align-items-center">
-          <kep-icon *ngIf="item?.icon" class="me-1" type="duotone" size="medium-1" color="primary" [name]="item.icon"></kep-icon>
-          <span>{{ item?.title }}</span>
-        </div>
-      </ng-template>
-      <ng-template ng-option-tmp let-item="item">
-        <div class="d-flex align-items-center w-100">
-          <kep-icon *ngIf="item?.icon" class="me-1" type="duotone" size="medium-1" color="primary" [name]="item.icon"></kep-icon>
-          <span>{{ item?.title }}</span>
-          <span class="ms-auto text-muted small">{{ item?.contestsCount }}</span>
-        </div>
-      </ng-template>
-    </ng-select>
-  }
-</div>
+<ng-select
+  [items]="categories"
+  bindLabel="title"
+  bindValue="id"
+  [loading]="isLoading"
+  [clearable]="true"
+  [searchable]="false"
+  [placeholder]="'Categories' | translate"
+  [(ngModel)]="activeCategory"
+  (ngModelChange)="categoryChange($event)"
+  style="width: 200px"
+>
+  <ng-template ng-option-tmp let-item="item">
+    <div class="d-flex align-items-center text-dark">
+      <kep-icon class="me-1" type="duotone" size="medium-1" color="primary" [name]="item.icon"></kep-icon>
+      <span>{{ item?.title }}</span>
+      <span class="ms-auto text-muted small">{{ item?.contestsCount }}</span>
+    </div>
+  </ng-template>
+</ng-select>
