--- a/src/app/styles/scifi-extended/content.scss
+++ b/src/app/styles/scifi-extended/content.scss
@@ -135,6 +135,10 @@ html[data-theme-mode="light"] {
   }
 }
 
+.ng-dropdown-panel .ng-dropdown-panel-items .ng-option.ng-option-marked {
+  background: var(--primary01) !important;
+}
+
 html {
   scroll-behavior: auto !important;
 }
