--- a/src/app/modules/contests/pages/contests/contests.component.html
+++ b/src/app/modules/contests/pages/contests/contests.component.html
@@ -6,7 +6,7 @@
       <div class="card-header px-3 py-3">
         <div class="card-title font-medium-5 align-items-center">
           <kep-icon class="me-1" color="primary" name="contest" size="medium-5" type="duotone"></kep-icon>
-          <span class="text-dark">{{ 'Contests' | translate }}</span>
+          <span class="text-dark">{{ 'Contests.Contests' | translate }}</span>
           <span *ngIf="!isLoading" class="total-count">({{ pageResult?.total }})</span>
         </div>
 
