--- a/src/app/modules/contests/pages/contests/sections/section-header/section-header.component.html
+++ b/src/app/modules/contests/pages/contests/sections/section-header/section-header.component.html
@@ -55,7 +55,7 @@
             <div class="text-dark d-flex text-nowrap align-items-center" [ngClass.gt-sm]="'font-medium-2'"
                  [ngClass.lt-md]="'font-small-3'">
               <kep-icon type="duotone" class="text-dark d-md-inline-block d-none me-1" name="contest"></kep-icon>
-              {{ 'Contests' | translate }}: {{ data.contestantsCount }}
+              {{ 'Contests.Contests' | translate }}: {{ data.contestantsCount }}
             </div>
           </div>
         </div>
