--- a/src/app/modules/contests/pages/rating/rating.component.html
+++ b/src/app/modules/contests/pages/rating/rating.component.html
@@ -8,7 +8,7 @@
           <tr>
             <th class="text-center">#</th>
             <th class="">{{ 'User' | translate }}</th>
-            <th container="body" ngbTooltip="{{ 'Contests' | translate }}" class="text-center">
+            <th container="body" ngbTooltip="{{ 'Contests.Contests' | translate }}" class="text-center">
               <kep-icon name="contest"></kep-icon>
             </th>
             <th container="body" ngbTooltip="{{ 'Rating' | translate }}" class="text-center">
