--- a/src/app/modules/testing/ui/pages/test-pass/test-pass.page.html
+++ b/src/app/modules/testing/ui/pages/test-pass/test-pass.page.html
@@ -15,192 +15,35 @@
             </div>
             <hr>
             <div class="card-body">
-              @if (question.type == 1) {
-                <div>
-                  <h5 class="ps-1 d-flex">
-                    {{ question.number }}.
-                    <span class="ps-50">
-                      <mathjax [content]="question.body"></mathjax>
-                    </span>
-                  </h5>
-                  <br>
-                  @for (option of question.options; track option; let i = $index) {
-                    <div
-                      class="ms-1 mb-1 form-check"
-                    >
-                      <input
-                        type="radio"
-                        id="radio-{{ i }}"
-                        name="selectedOption"
-                        [(ngModel)]="selectedOption"
-                        [value]="i"
-                        class="form-check-input"/>
-                      <label class="form-check-label" for="radio-{{ i }}">{{ option.option }}</label>
-                    </div>
-                  }
-                </div>
-              }
-
-              @if (question.type == 2) {
-                <div>
-                  <h5 class="ps-1 d-flex">
-                    {{ question.number }}.
-                    <span class="ps-50">
-                      <mathjax [content]="question.body"></mathjax>
-                    </span>
-                  </h5>
-                  <br>
-                  @for (option of question.options; track option; let i = $index) {
-                    <div
-                      class="ms-1 mb-1 custom-control custom-control-primary custom-checkbox"
-                    >
-                      <input
-                        type="checkbox"
-                        id="check-{{ i }}"
-                        [(ngModel)]="option.selected"
-                        class="form-check-input me-2"/>
-                      <label class="form-check-label" for="check-{{ i }}">{{ option.option }}</label>
-                    </div>
-                  }
-                </div>
-              }
-
-              @if (question.type == 3) {
-                <div>
-                  <h5 class="ps-1 d-flex">
-                    {{ question.number }}.
-                    <span class="ps-50">
-                      <mathjax [content]="question.body"></mathjax>
-                    </span>
-                  </h5>
-                  <br>
-                  <div class="col-lg-6 col-12 mx-auto">
-                    <input type="text" [(ngModel)]="question.input" id="input" class="form-control"/>
-                  </div>
-                </div>
-              }
-
-              @if (question.type == 4) {
-                <div>
-                  <h5 class="ps-1 d-flex">
-                    {{ question.number }}.
-                    <span class="ps-50 question-body">
-                      <mathjax [content]="question.body"></mathjax>
-                    </span>
-                  </h5>
-                  <div class="row">
-                    <div class="col">
-                      <ul class="list-group" dragula="basic-list-group-1" [(dragulaModel)]="conformityGroupOne"
-                          id="basic-list-group-1">
-                        @for (option of conformityGroupOne; track option) {
-                          <li class="bg-gradient-primary list-group-item draggable">
-                            <div class="row justify-content-between">
-                              <div class="ps-1">
-                                {{ option }}
-                              </div>
-                              <div class="pe-1">
-                                <i class="text-primary" data-feather="arrow-right"></i>
-                              </div>
-                            </div>
-                          </li>
-                        }
-                      </ul>
-                    </div>
-                    <div class="col">
-                      <ul class="list-group" dragula="basic-list-group-2" [(dragulaModel)]="conformityGroupTwo"
-                          id="basic-list-group-2">
-                        @for (option of conformityGroupTwo; track option) {
-                          <li class="bg-gradient-primary list-group-item draggable">
-                            <i class="text-white" data-feather="arrow-left"></i>
-                            {{ option }}
-                          </li>
-                        }
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              }
-
-              @if (question.type == 5) {
-                <div>
-                  <h5 class="ps-1 d-flex">
-                    {{ question.number }}.
-                    <span class="ps-50 question-body">
-                      <mathjax [content]="question.body"></mathjax>
-                    </span>
-                  </h5>
-                  <br>
-                  <div class="col-lg-6 col-12 mx-auto">
-                    <ul class="list-group" dragula="basic-list-group-3" [(dragulaModel)]="orderingList"
-                        id="basic-list-group-3">
-                      @for (option of orderingList; track option) {
-                        <li class="bg-gradient-primary list-group-item draggable">
-                          <div class="row justify-content-between">
-                            <div class="ps-1">
-                              {{ option }}
-                            </div>
-                            <div class="pe-1">
-                              <i class="text-primary" data-feather="arrow-right"></i>
-                            </div>
-                          </div>
-                        </li>
-                      }
-                    </ul>
-                  </div>
-                </div>
-              }
-
-              @if (question.type == 6) {
-                <div>
-                  <h5 class="ps-1 d-flex">
-                    {{ question.number }}.
-                    <span class="ps-50" mathjax [innerHTML]="question.body"></span>
-                  </h5>
-                  <br>
-                  {{ classificationGroups | json }}
-                  <div class="col-lg-6 col-12 mx-auto">
-                    @for (group of classificationGroups; track group; let i = $index) {
-                      <div>
-                        <li class="list-group-item">
-                          {{ group.key }}
-                        </li>
-                        <ul class="list-group" dragula="basic-list-group-3" [(dragulaModel)]="group.values"
-                            id="basic-list-group-{{i}}">
-                          @for (option of group.values; track option) {
-                            <li class="bg-gradient-primary list-group-item draggable">
-                              <div class="row justify-content-between">
-                                <div class="ps-1">
-                                  {{ option }}
-                                </div>
-                                <div class="pe-1">
-                                  <i class="text-primary" data-feather="arrow-right"></i>
-                                </div>
-                              </div>
-                            </li>
-                          }
-                        </ul>
-                      </div>
-                    }
-                  </div>
-                </div>
-              }
-
-              @if (question.type == 7) {
-                <div>
-                  <h5 class="ps-1 d-flex">
-                    {{ question.number }}.
-                    <span class="ps-50" mathjax [innerHTML]="question.body"></span>
-                  </h5>
-                  <br>
-                  <div style="height: 250px;">
-                    <monaco-editor
-                      class="mt-1"
-                      [(ngModel)]="question.input"
-                      [ngModelOptions]="{standalone: true}"
-                      [lang]="'py'"
-                    />
-                  </div>
-                </div>
+              @if (question) {
+                @if (question.type === QuestionType.SingleChoice) {
+                  <app-single-choice-question
+                    [question]="question"
+                    [(selectedOption)]="selectedOption"
+                  />
+                } @else if (question.type === QuestionType.MultipleChoice) {
+                  <app-multiple-choice-question [question]="question" />
+                } @else if (question.type === QuestionType.TextInput) {
+                  <app-text-input-question [question]="question" />
+                } @else if (question.type === QuestionType.Conformity) {
+                  <app-conformity-question
+                    [question]="question"
+                    [groupOne]="conformityGroupOne"
+                    [groupTwo]="conformityGroupTwo"
+                  />
+                } @else if (question.type === QuestionType.Ordering) {
+                  <app-ordering-question
+                    [question]="question"
+                    [orderingList]="orderingList"
+                  />
+                } @else if (question.type === QuestionType.Classification) {
+                  <app-classification-question
+                    [question]="question"
+                    [classificationGroups]="classificationGroups"
+                  />
+                } @else if (question.type === QuestionType.CodeInput) {
+                  <app-code-input-question [question]="question" />
+                }
               }
             </div>
 
