--- a/src/app/modules/hackathons/ui/pages/hackathons-list/hackathons-list.page.html
+++ b/src/app/modules/hackathons/ui/pages/hackathons-list/hackathons-list.page.html
@@ -4,7 +4,7 @@
   <div class="card-header p-4">
     <div class="card-title font-medium-5 align-items-center">
       <kep-icon name="hackathons" size="medium-5"/>
-      <span class="text-dark">{{ 'Hackathons' | translate }}</span>
+      <span class="text-dark">{{ 'Menu.Hackathons' | translate }}</span>
       <span *ngIf="!isLoading" class="total-count">({{ pageResult?.total }})</span>
     </div>
     <div>
