--- a/src/app/modules/home/statistics-section/statistics-section.component.html
+++ b/src/app/modules/home/statistics-section/statistics-section.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="count-item decoration-top">
       <strong [countUp]="statistics?.contestsCount" [options]="{ duration: 5 }">0</strong>
-      <span>{{ 'Contests' | translate }}</span>
+      <span>{{ 'Contests.Contests' | translate }}</span>
     </div>
     <div class="count-item decoration-bottom">
       <strong [countUp]="statistics?.problemsCount" [options]="{ duration: 5 }">0</strong>
