--- a/src/app/modules/home/contests-section/contests-section.component.html
+++ b/src/app/modules/home/contests-section/contests-section.component.html
@@ -1,6 +1,6 @@
 <h3 class="mb-1 text-dark">
   <kep-icon name="competitions" type="duotone"/>
-  {{ 'Contests' | translate }}
+  {{ 'Contests.Contests' | translate }}
 </h3>
 
 @if (isLoading) {
