--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,8 +1,8 @@
 $primary: #{var(--primary)};
 $secondary: rgb(0, 227, 210);
-$warning: rgb(235, 247, 72);
+$warning: rgb(255, 140, 0);
 $info: rgb(72, 247, 238);
-$success: rgb(72, 247, 104);
+$success: rgb(0, 230, 43);
 $danger: rgb(255, 74, 74);
 
 $light: rgb(40, 60, 56);
@@ -16,7 +16,7 @@ $indigo: #6663ff;
 $white: #fff;
 $gray: #8699A3;
 $black: #000;
-$yellow: #fff621;
+$yellow: #ff8c00;
 $orange: rgb(255, 116, 23);
 $pink: rgb(252, 108, 133);
 $purple: rgb(143, 0, 255);
