--- a/src/app/modules/contests/components/contest-card/contest-card/top3-contestants/top3-contestants.component.html
+++ b/src/app/modules/contests/components/contest-card/contest-card/top3-contestants/top3-contestants.component.html
@@ -4,36 +4,42 @@
       <div class="col contestant mt-1">
         <img width="32" height="32" src="assets/images/icons/contest-medal-2.png">
         <br>
-        <contestant-view
-          [teamNameColor]="'white'"
-          [textColor]="'white'"
-          [user]="top3Contestants[1].user"
-          [team]="top3Contestants[1].team">
-        </contestant-view>
+        <div class="d-flex justify-content-center">
+          <contestant-view
+            [teamNameColor]="'white'"
+            [textColor]="'white'"
+            [user]="top3Contestants[1].user"
+            [team]="top3Contestants[1].team">
+          </contestant-view>
+        </div>
       </div>
     }
 
     <div class="col contestant">
       <img width="32" height="32" src="assets/images/icons/contest-medal-1.png">
       <br>
-      <contestant-view
-        [teamNameColor]="'white'"
-        [textColor]="'white'"
-        [user]="top3Contestants[0].user"
-        [team]="top3Contestants[0].team">
-      </contestant-view>
+      <div class="d-flex justify-content-center">
+        <contestant-view
+          [teamNameColor]="'white'"
+          [textColor]="'white'"
+          [user]="top3Contestants[0].user"
+          [team]="top3Contestants[0].team">
+        </contestant-view>
+      </div>
     </div>
 
     @if (top3Contestants.length > 2) {
       <div class="col contestant mt-2">
         <img width="32" height="32" src="assets/images/icons/contest-medal-3.png">
         <br>
-        <contestant-view
-          [teamNameColor]="'white'"
-          [textColor]="'white'"
-          [user]="top3Contestants[2].user"
-          [team]="top3Contestants[2].team">
-        </contestant-view>
+        <div class="d-flex justify-content-center">
+          <contestant-view
+            [teamNameColor]="'white'"
+            [textColor]="'white'"
+            [user]="top3Contestants[2].user"
+            [team]="top3Contestants[2].team">
+          </contestant-view>
+        </div>
       </div>
     }
   </div>
