--- a/src/app/shared/components/user-popover/user-popover/user-popover.component.html
+++ b/src/app/shared/components/user-popover/user-popover/user-popover.component.html
@@ -18,7 +18,7 @@
             <div class="full-name">
               {{ user.firstName }} {{ user.lastName }}
             </div>
-            <small class="text-muted">@{{ user.username }}</small>
+            <small class="text-muted">{{ user.username }}</small>
           </div>
         </div>
 
