--- a/src/app/modules/duels/ui/pages/duels/duels.page.html
+++ b/src/app/modules/duels/ui/pages/duels/duels.page.html
@@ -15,7 +15,7 @@
       </div>
     </app-content-header>
 
-    <div class="row g-3">
+    <div class="row">
       <div class="col-12">
         <duel-ready-status-card
           [isReady]="isReady"
