--- a/src/app/modules/duels/ui/components/duel-preset-modal/duel-preset-modal.component.html
+++ b/src/app/modules/duels/ui/components/duel-preset-modal/duel-preset-modal.component.html
@@ -89,7 +89,7 @@
     </div>
     <div class="modal-footer">
       <button type="button" class="btn btn-outline-secondary" (click)="onCancel()">{{ 'Cancel' | translate }}</button>
-      <button type="submit" class="btn btn-primary" [disabled]="form!.invalid || loading">{{ 'CreateDuel' | translate }}</button>
+      <button type="submit" class="btn btn-success" [disabled]="form!.invalid || loading">{{ 'CreateDuel' | translate }}</button>
     </div>
   </form>
 } @else {
