--- a/src/app/modules/contests/components/contestant-view/contestant-view.component.html
+++ b/src/app/modules/contests/components/contestant-view/contestant-view.component.html
@@ -31,7 +31,7 @@
       [size]="imgSize">
     </contests-rating-image>
     <user-popover [customContent]="true" [textColor]="textColor" [username]="user.username">
-      <div>
+      <div class="text-dark">
         {{ user.username }}
       </div>
       <div class="text-muted" *ngIf="user.userFullName">
