--- a/src/app/modules/problems/components/attempts-table/table/table.component.html
+++ b/src/app/modules/problems/components/attempts-table/table/table.component.html
@@ -179,10 +179,9 @@
         </td>
 
         <td *ngIf="!hideSourceCodeSize">
-          <div class="d-flex align-items-center text-nowrap text-dark">
-            <kep-icon name="code" type="duotone"/>
+          <code class="fw-medium">
             {{ attempt.sourceCodeSize }}
-          </div>
+          </code>
         </td>
 
         <td *ngIf="currentUser?.isSuperuser">
