--- a/src/app/modules/problems/pages/rating/rating.component.html
+++ b/src/app/modules/problems/pages/rating/rating.component.html
@@ -16,7 +16,7 @@
                   [ordering]="difficulty"
                   [reverse]="true"
                   [value]="ordering">
-                  {{ difficulty | uppercase | translate }}
+                  {{ difficulty | titlecase | translate }}
                 </table-ordering>
               </th>
             }
